--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html {
 
 .big-text {
     font-family: Lato;
+    text-align: center;
     position: absolute;
     top: 15%;
     left: 50%;
@@ -39,6 +40,7 @@ html {
     transition: 0.6s;
     width: 500px;
     font-size: 40px;
+    text-align: center;
 
 }
 
@@ -75,4 +77,5 @@ html {
     transform: translate(-50%, 50%);
     font-size: 20px;
     color: beige;
+    text-align: center;
 }
