--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ html {
 
 .big-text {
     font-family: Lato;
-    text-align: center;
     position: absolute;
     top: 15%;
     left: 50%;
@@ -21,6 +20,7 @@ html {
     font-size: 80px;
     color: #6da8f6d7;
     letter-spacing: 5px;
+    text-align: center;
 }
 
 .btn {
@@ -66,6 +66,52 @@ html {
 }
 
 .btn1:hover::before {
+    height: 180%;
+}
+
+.btnsec {
+
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    cursor: pointer;
+    color: beige;
+    border: none;
+    background: none;
+    overflow: hidden;
+    font-family: Lato;
+    letter-spacing: 2px;
+    color: #c82275d7;
+    transition: 0.6s;
+    width: 520px;
+    font-size: 50px;
+    text-align: center;
+
+}
+
+.btnsec:hover {
+    transition: 1s;
+    color: wheat;
+}
+
+.btnsec::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #c82275d7;
+    z-index: -1;
+    transition: 0.8s;
+}
+
+.btn2::before {
+    top: 0;
+    border-radius: 0 0 50% 50%;
+}
+
+.btn2:hover::before {
     height: 180%;
 }
 
